modules/cstl-admin/grunt/src/less/main.less
/*
 * Constellation - An open source and standard compliant SDI
 *
 *    http://www.constellation-sdi.org
 *
 *    Copyright 2014 Geomatys.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
html{
  height:100%;
}

[ng\:cloak], [ng-cloak], .ng-cloak {
 display: none !important;
}
li>a {
    cursor: pointer;
}
.btn-language{
    margin-right: 16px;
}
.menu-selected{
    text-decoration: none;
    background-color: #eeeeee;
    color: #6f6f6f;
}

body {
    background-color: #f2f2f2;
    padding-bottom: 55px;
    position: relative;
    min-height: 100%;
    height: auto;
}

.form-group .error {
    color: #5e5e5e;
    font-weight:bold;
    background-color: #f2dede;
    margin-top:10px;
    padding:8px;
    border-radius: 3px;
}

.logo-wrapper {
    margin-bottom: 15px;
    margin-top: 15px;
}

.logo-wrapper img {
    height: 68px;
    max-height: 68px;
}

.inline {
    display: inline-block;
}
.checkbox.inline {
    margin-right: 15px;
}

.dropdown-menu {
    z-index: 2000;
}
.dropdown-menu li > a[disabled] {
    color: #B7B7B7;
    cursor: default;
}
.nav-frame {
    padding: 9px 0;
}

.frame {
    -webkit-box-shadow: 0 0 10px rgba(150,150,150,0.1);
    -moz-box-shadow: 0 0 10px rgba(150,150,150,0.1);
    box-shadow: 0 0 10px rgba(150,150,150,0.1);
    background-color: white;
    margin-bottom: 20px;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
}

.frame>.navbar .navbar-inner {
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
    border-bottom: 1px solid #e3e3e3;
}

#rememberMe {
    line-height: 34px;
    margin-left: 10px;
}

.bg-white {
    background-color: white;
}
.tab-content .tab-pane {
    padding-top: 20px;
}
.nav-list>.active>a, .nav-list>.active>a:hover, .nav-list>.active>a:focus {
    color: #ffffff;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
    background-color: #5bc0de;
}

.nav-list>li>a {
    padding: 3px 15px;
}

a.trim-name {
    max-width: 180px;
    display: inline-block;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    line-height: 15px;
    position: relative;
    cursor: pointer;
}
a.trim-name.larger {
    max-width: 225px;
}
a.trim-name.link-sel {
    color: rgb(185, 74, 72);
}
ul.unstyled {
    list-style: none;
    padding: 0;
}
.block-folders {
    margin: 0 5px;
}
.header-title{
    color:#5e5e5e;
    margin-left: 20px;
}
.blanc{
    color:white;
}

/* Boutons */

.btn-add{
    color: #ffffff;
    background-color: #2e8bbf;
    border-color: #297dab;
}
.btn-add:hover, .btn-add:focus{
    color: #ffffff;
    background-color: #297dab;
    border-color: #246f98;
}
.btn-add > .caret{
    border-top-color: #ffffff;
    border-bottom-color: #ffffff;
}


.dashboard rzslider{
    margin: 10px 0;
}
.dashboard rzslider .bubble{
    display: none;
}

/*
 * Accueil
 */
.accueil-header-logo{
  margin-top: 50px;
  margin-bottom: 20px;
}
.accueil_logo{
    margin-top: 20px;
}
.accueil_text_welcome{
    margin-top: 50px; 
    text-align: center;
}
.accueil_text_welcome h2{
    font-size: 30px;
    font-family: Verdana,Arial,Helvetica,sans-serif;
    font-weight: bold; 
    color: #5E5E5E;
    line-height:40px;
}
.accueil-well{
    padding-bottom: 0px; 
    padding-top: 0px; 
    margin-top: 40px;
}
.accueil_bloc_text{
    line-height: 26px;
    font-size: 15px;
    font-family: Verdana,Arial,Helvetica,sans-serif;
}
.accueil_bloc_images{
        margin-top: 0; 
        margin-left: 0;
        text-align: center;
    }
.main-block-stat{
  margin-top:40px;
}
.main-block-right{
  padding: 5px 40px 25px;
  margin-bottom:10px;
  h1{
    margin-bottom: 20px;
    font-size:20px;
    color:#5e5e5e;
  }
  .accueil-stat-blocs{
    background-color:#eaeaea;
    padding:10px;
    border-radius:5px;
    text-align:center;
  }
  .blocs-bottom{
    margin-top:20px;
  }
}
.main-block-left{
  padding: 37px 37px;
}

.main-block-domain-choice{
  background-color: #eaeaea;
  color:#5e5e5e;
  border: 2px solid #dadada;
  li+li{
    margin-left:10px;
  }
  a{
    color:#5e5e5e;
  }
  .activDomain a{
    color:white;
    background-color:#2e8bbf;
  }
}
.nav-domain>li>a:hover, .nav-domain>li>a:focus{
  background-color:#e3e3e3;
  color:#5e5e5e;
}
.nav-domain>li.activDomain>a:hover, .nav-domain>li.activDomain>a:focus{
  color:white;
  background-color:#2e8bbf;
}
.img-left-block-service{
  width:65px;
  height:66px;
  background: transparent url('../img/index-img.svg') 65px 0;
}
.img-left-block-data{
  width:65px;
  height:66px;
  background: transparent url('../img/index-img.svg') 142px 0;
}
.img-left-block-sensor{
  width:65px;
  height:66px;
  background: transparent url('../img/index-img.svg') 142px 66px;
}
.img-right-block-service{
  width:65px;
  height:65px;
  margin-top:15px;
  position:absolute;
  background: transparent url('../img/index-img.svg') 0 65px;
}
.img-right-block-data{
  width:65px;
  height:65px;
  margin-top:15px;
  position:absolute;
  background: transparent url('../img/index-img.svg') 0 0;
}
.img-right-block-user{
  width:66px;
  height:66px;
  margin-top:23px;
  position:absolute;
  background: transparent url('../img/index-img.svg') -76px 66px;
}
.img-right-block-process{
  width:68px;
  height:67px;
  margin-top:15px;
  position:absolute;
  background: transparent url(../img/index-img.svg) -75px 0;
}

/*
 * Service
 */
h3.service-name{
  font-size:21px;
}
/* ... */

